# django-easy-icons

./: .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  README.md  manage.py  pyproject.toml
.github/: bot-identity-pilot.md
.github/workflows/: auto-merge-dependabot.yml  build.yml  changelog.yml  dependencies.yml  docs.yml  on-release-main.yml  prepare-release.yml  publish.yml  tag-release.yml  tests.yml
docs/: conf.py
docs/adr/: 0001-renderer-strategy-architecture.md  0002-single-validation-point.md  0003-settings-star-expansion.md  0004-registry-and-caching.md
easy_icons/: base.py  renderers.py  utils.py
easy_icons/management/commands/: show_icon_registry.py
memory/: constitution.md
tests/: __init__.py  conftest.py  settings.py  test_aliases.py  test_base.py  test_exceptions.py  test_icon_packs.py  test_icon_registry.py  test_integration.py  test_management_commands.py  test_provider_renderer.py  test_sprites_renderer.py  test_svg_renderer.py  test_templatetags.py  test_utils.py
