[tool.poetry]
version = "0.6.0"
packages = [{ include = "easy_icons" }]
requires-poetry = '>=2.0,<3.0'

[tool.poetry.group.dev.dependencies]
fairdm-dev-tools = { git = "https://github.com/FAIR-DM/dev-tools", extras = [
    "dev",
    "test",
] }

[tool.poetry.group.docs.dependencies]
fairdm-docs = { git = "https://github.com/FAIR-DM/fairdm-docs", extras = [
    "sphinx_book_theme",
] }

[build-system]
requires = ['poetry-core (>=2.0,<3.0)']
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = [".", "tests"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "tests.py", "*_tests.py"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=easy_icons",
    "--cov-report=html",
    "-ra",
]
filterwarnings = [
    "ignore",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.report]
skip_empty = true
show_missing = true

[tool.coverage.run]
branch = true
source = ["easy_icons"]

[tool.djlint]
profile = "django"
indent = 2
preserve_leading_space = true
preserve_blank_lines = true
format_attribute_template_tags = true
format_css = true
format_js = true
max_line_length = 120
max_attribute_length = 70
include = "H006,H013,H020,H021,H023,H025,H030,H031"
ignore = "H017"
extension = "html"

[tool.black]
line-length = 120
target-version = ['py38']
preview = true

[tool.isort]
profile = "black"

[tool.mypy]
files = ["easy_icons"]
disallow_untyped_defs = "False"
disallow_any_unimported = "False"
ignore_missing_imports = "True"
no_implicit_optional = "True"
check_untyped_defs = "False"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
exclude = ["docs/", "migrations/", "tests/settings.py"]
mypy_path = "easy_icons/"
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.settings"
ignore_missing_model_attributes = "True"

[tool.deptry]
extend_exclude = ["tasks.py", "tests/", "example/", "docs/"]

[tool.deptry.per_rule_ignores]
DEP003 = ["easy_icons"]

[project]
name = "django-easy-icons"
description = "Easy, flexible icons for Django"
license = "MIT"
dynamic = ["version"]
readme = "README.md"
authors = [{ name = "Sam", email = "samuel.scott.jennings@gmail.com" }]
requires-python = '>=3.11,<4.0'
dependencies = ['django']

[project.urls]
homepage = "https://github.com/SamuelJennings/django-easy-icons"
