[tool.poetry]
# Source of truth for the release flow: tag-release cuts v<version> when no
# matching tag exists on a main push touching this file.
version = "0.6.0"
packages = [{ include = "easy_icons" }]
requires-poetry = '>=2.0,<3.0'

[tool.poetry.group.dev.dependencies]
# Family toolchain bundle; the pin tag is the family-standard version. The
# python marker keeps the 3.11 package floor for consumers — dev tooling
# never ships to them.
mvp-shared = { git = "https://github.com/django-mvp/shared.git", tag = "v0.2.0", extras = [
    "dev",
    "test",
], python = ">=3.12" }

[tool.poetry.group.docs.dependencies]
fairdm-docs = { git = "https://github.com/FAIR-DM/fairdm-docs", extras = [
    "sphinx_book_theme",
] }

[build-system]
requires = ['poetry-core (>=2.0,<3.0)']
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = [".", "tests"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "tests.py", "*_tests.py"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=easy_icons",
    "--cov-report=html",
    "-ra",
]
filterwarnings = [
    "ignore",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.report]
skip_empty = true
show_missing = true

[tool.coverage.run]
branch = true
source = ["easy_icons"]

[tool.djlint]
profile = "django"
indent = 2
preserve_leading_space = true
preserve_blank_lines = true
format_attribute_template_tags = true
format_css = true
format_js = true
max_line_length = 120
max_attribute_length = 70
include = "H006,H013,H020,H021,H023,H025,H030,H031"
ignore = "H017"
extension = "html"

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
# migrations are generated code — never linted or reformatted.
# tests/ excluded at first adoption: ruff had never run here and wants ~250
# mechanical fixes in tamper-protected test files; lift the exclusion via a
# dedicated test-cleanup change (the per-file-ignores below then apply).
exclude = ['docs/', '**/migrations/**', 'tests/']

[tool.ruff.lint]
# Family-standard rule set (mirrors django-content-license).
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Mutable class attributes (noise on Django Meta)
    "RUF012",
    # Avoid long messages outside the exception class
    "TRY003",
    # Class attribute shadowing a builtin (Django field names)
    "A003",
    # Function too complex
    "C901",
]

[tool.ruff.lint.per-file-ignores]
# Tests: asserts, hardcoded test passwords, blind-exception asserts, builtin
# shadowing, unused unpacked vars — style rules that don't pay for themselves
# in tests, which the pre-commit hooks exclude anyway.
"tests/*" = ["S101", "S105", "B017", "A001", "RUF059"]
# The bundled example project ships a throwaway dev SECRET_KEY by design.
"example/settings.py" = ["S105"]

[tool.mypy]
files = ["easy_icons"]
disallow_untyped_defs = "False"
disallow_any_unimported = "False"
ignore_missing_imports = "True"
no_implicit_optional = "True"
check_untyped_defs = "False"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
exclude = ["docs/", "migrations/", "tests/settings.py"]
mypy_path = "easy_icons/"
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.settings"
ignore_missing_model_attributes = "True"

[tool.deptry]
extend_exclude = ["tasks.py", "tests/", "example/", "docs/"]

[tool.deptry.per_rule_ignores]
DEP003 = ["easy_icons"]

[project]
name = "django-easy-icons"
description = "Easy, flexible icons for Django"
license = "MIT"
dynamic = ["version"]
readme = "README.md"
authors = [{ name = "Sam", email = "samuel.scott.jennings@gmail.com" }]
requires-python = '>=3.11,<4.0'
dependencies = ['django']

[project.urls]
homepage = "https://github.com/SamuelJennings/django-easy-icons"
